--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==5.1.3 # web framework
 python-dotenv==1.0.1 # environment variable
 pillow==11.0.0 # lib driver imagefield
-psycopg2-binary==2.9.10 # lib driver DB Postgresql
+PyMySQL==1.1.1 # lib driver DB MySQL
 SQLAlchemy==2.0.36 # lib ORM DB RDBMS
 pytz==2024.2 # lib timezone
