--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,24 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "core/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "15md", "runtime": "python3.11" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles_build"
+      }
     }
   ],
   "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "core/wsgi.py"
